--- a/RandomUser.App/Pages/Index.razor
+++ b/RandomUser.App/Pages/Index.razor
@@ -12,13 +12,13 @@
 
 		<div class="row header">
 			<div class="col-md-1">
-				Gender
+				Title
 			</div>
 			<div class="col-md-2">
-				Firstname
+				First Name
 			</div>
 			<div class="col-md-2">
-				Lastname
+				Surname
 			</div>
 			<div class="col-md-1">
 				Age
@@ -38,7 +38,7 @@
 		{
 			<div class="row">
 				<div class="col-md-1">
-					@user.gender
+					@user.name.title
 				</div>
 				<div class="col-md-2">
 					@user.name.first
